[package]
name = "notebook-tools"
version = "0.1.0"
authors = ["Benjamin Scholtz <ben@bitsofether.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.1"
